--- a/index.html
+++ b/index.html
@@ -5,115 +5,113 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-  <head>
-    <title>Alex Curnow</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-  </head>
-  <body>
-    <!-- Wrapper -->
-    <div id="wrapper">
-      <!-- Header -->
-      <header id="header">
-        <span class="avatar"
-          ><img src="images/fulls/CTA_10.png" alt="photo of Alex"
-        /></span>
-        <h1>
-          My name is <strong>Alex Curnow</strong>, and I'm a full stack web
-          developer.
-        </h1>
-        <ul class="icons">
-          <li>
-            <a
-              target="_blank"
-              href="https://github.com/alexcurnow"
-              class="icon style2 fa-github"
-              ><span class="label">GitHub</span></a
-            >
-          </li>
-          <li>
-            <a
-              target="_blank"
-              href="./assets/Alex_Curnow_Resume_1.pdf"
-              class="icon style2 fa-file"
-              ><span class="label">Resumé</span></a
-            >
-          </li>
-          <li>
-            <a
-              target="_blank"
-              href="https://www.linkedin.com/in/alexcurnow/"
-              class="icon style2 fa-linkedin"
-              ><span class="label">LinkedIn</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="mailto:alexcurnow@gmail.com"
-              class="icon style2 fa-envelope-o"
-              ><span class="label">Email</span></a
-            >
-          </li>
-        </ul>
-      </header>
 
-      <!-- Main -->
-      <section id="main">
-        <h1 class="myWork">My Work</h1>
-        <!-- Thumbnails -->
-        <section class="thumbnails">
-          <div>
-            <a href="images/fulls/01.jpg">
-              <img src="images/thumbs/01.jpg" alt="" />
-              <h3>Lorem ipsum dolor sit amet</h3>
-            </a>
-            <a href="images/fulls/02.jpg">
-              <img src="images/thumbs/02.jpg" alt="" />
-              <h3>Lorem ipsum dolor sit amet</h3>
-            </a>
-          </div>
-          <div>
-            <a href="images/fulls/03.jpg">
-              <img src="images/thumbs/03.jpg" alt="" />
-              <h3>Lorem ipsum dolor sit amet</h3>
-            </a>
-            <a href="images/fulls/04.jpg">
-              <img src="images/thumbs/04.jpg" alt="" />
-              <h3>Lorem ipsum dolor sit amet</h3>
-            </a>
-            <a href="images/fulls/05.jpg">
-              <img src="images/thumbs/05.jpg" alt="" />
-              <h3>Lorem ipsum dolor sit amet</h3>
-            </a>
-          </div>
-          <div>
-            <a href="images/fulls/06.jpg">
-              <img src="images/thumbs/06.jpg" alt="" />
-              <h3>Lorem ipsum dolor sit amet</h3>
-            </a>
-            <a href="images/fulls/07.jpg">
-              <img src="images/thumbs/07.jpg" alt="" />
-              <h3>Lorem ipsum dolor sit amet</h3>
-            </a>
-          </div>
-        </section>
-      </section>
+<head>
+  <title>Alex Curnow</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-      <!-- Footer -->
-      <footer id="footer">
-        <p>
-          &copy; Untitled. All rights reserved. Design:
-          <a href="http://templated.co">TEMPLATED</a>. Demo Images:
-          <a href="http://unsplash.com">Unsplash</a>.
+<body>
+  <!-- Wrapper -->
+  <div id="wrapper">
+    <!-- Header -->
+    <header id="header">
+      <span class="avatar"><img src="images/fulls/CTA_10.png" alt="photo of Alex" /></span>
+      <h1>
+        My name is <strong>Alex Curnow</strong>, and I'm a full stack web
+        developer.
+      </h1>
+      <ul class="icons">
+        <li>
+          <a target="_blank" href="https://github.com/alexcurnow" class="icon style2 fa-youtube"><span
+              class="label">Youtube</span></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com/alexcurnow" class="icon style2 fa-github"><span
+              class="label">GitHub</span></a>
+        </li>
+        <li>
+          <a target="_blank" href="./assets/Alex_Curnow_Resume_1.pdf" class="icon style2 fa-file"><span
+              class="label">Resumé</span></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.linkedin.com/in/alexcurnow/" class="icon style2 fa-linkedin"><span
+              class="label">LinkedIn</span></a>
+        </li>
+        <li>
+          <a href="mailto:alexcurnow@gmail.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a>
+        </li>
+      </ul>
+    </header>
+
+    <!-- Main -->
+    <section id="main">
+      <h1 class="myWork">README</h1>
+      <!-- Thumbnails -->
+      <section class="readme">
+        <p>Above you have much of what you need to get to know me as a software engineer.
+          Up first is a link to a youtube playlist of demos of my projects, so you can just
+          kick back and watch.<br />
+          Next is a link to my GitHub repository, so you can look at all the pretty codes I've written for those
+          projects.<br />
+          After that you'll see a link to a downloadable PDF of my resume, followed by my LinkedIn profile, and finally
+          my email so we can get to chatting. Talk soon ;)
         </p>
-      </footer>
-    </div>
+      </section>
+    </section>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.poptrox.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+    <!-- Footer -->
+    <footer id="footer">
+      <p>
+        &copy; Untitled. All rights reserved. Design:
+        <a href="http://templated.co">TEMPLATED</a>. Demo Images:
+        <a href="http://unsplash.com">Unsplash</a>.
+      </p>
+    </footer>
+  </div>
+
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.poptrox.min.js"></script>
+  <script src="assets/js/skel.min.js"></script>
+  <script src="assets/js/main.js"></script>
+</body>
+
 </html>
+
+<!-- <div>
+  <a href="images/fulls/01.jpg">
+    <img src="images/thumbs/01.jpg" alt="" />
+    <h3>Lorem ipsum dolor sit amet</h3>
+  </a>
+  <a href="images/fulls/02.jpg">
+    <img src="images/thumbs/02.jpg" alt="" />
+    <h3>Lorem ipsum dolor sit amet</h3>
+  </a>
+</div>
+<div>
+  <a href="images/fulls/03.jpg">
+    <img src="images/thumbs/03.jpg" alt="" />
+    <h3>Lorem ipsum dolor sit amet</h3>
+  </a>
+  <a href="images/fulls/04.jpg">
+    <img src="images/thumbs/04.jpg" alt="" />
+    <h3>Lorem ipsum dolor sit amet</h3>
+  </a>
+  <a href="images/fulls/05.jpg">
+    <img src="images/thumbs/05.jpg" alt="" />
+    <h3>Lorem ipsum dolor sit amet</h3>
+  </a>
+</div>
+<div>
+  <a href="images/fulls/06.jpg">
+    <img src="images/thumbs/06.jpg" alt="" />
+    <h3>Lorem ipsum dolor sit amet</h3>
+  </a>
+  <a href="images/fulls/07.jpg">
+    <img src="images/thumbs/07.jpg" alt="" />
+    <h3>Lorem ipsum dolor sit amet</h3>
+  </a>
+</div> -->
