--- a/index.html
+++ b/index.html
@@ -48,16 +48,10 @@
 
     <!-- Main -->
     <section id="main">
-      <h1 class="myWork">README</h1>
+      <h1 class="myWork"></h1>
       <!-- Thumbnails -->
       <section class="readme">
-        <p>Above you have much of what you need to get to know me as a software engineer.
-          Up first is a link to a youtube playlist of demos of my projects, so you can just
-          kick back and watch.<br />
-          Next is a link to my GitHub repository, so you can look at all the pretty codes I've written for those
-          projects.<br />
-          After that you'll see a link to a downloadable PDF of my resume, followed by my LinkedIn profile, and finally
-          my email so we can get to chatting. Talk soon ;)
+        <p>
         </p>
       </section>
     </section>
@@ -66,8 +60,7 @@
     <footer id="footer">
       <p>
         &copy; Untitled. All rights reserved. Design:
-        <a href="http://templated.co">TEMPLATED</a>. Demo Images:
-        <a href="http://unsplash.com">Unsplash</a>.
+        <a href="http://templated.co">TEMPLATED</a>.
       </p>
     </footer>
   </div>
