--- a/index.html
+++ b/index.html
@@ -5,73 +5,92 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
+  <head>
+    <title>Alex Curnow</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Alex Curnow</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-</head>
+  <body>
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Header -->
+      <header id="header">
+        <span class="avatar"
+          ><img src="images/fulls/CTA_10.png" alt="photo of Alex"
+        /></span>
+        <h1>
+          My name is <strong>Alex Curnow</strong>, and I'm a full stack web
+          developer.
+        </h1>
+        <ul class="icons">
+          <li>
+            <a
+              target="_blank"
+              href="https://github.com/alexcurnow"
+              class="icon style2 fa-youtube"
+              ><span class="label">Youtube</span></a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://github.com/alexcurnow"
+              class="icon style2 fa-github"
+              ><span class="label">GitHub</span></a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="./assets/AlexCurnowResumeV4.pdf"
+              class="icon style2 fa-file"
+              ><span class="label">Resumé</span></a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.linkedin.com/in/alexcurnow/"
+              class="icon style2 fa-linkedin"
+              ><span class="label">LinkedIn</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="mailto:alexcurnow@gmail.com"
+              class="icon style2 fa-envelope-o"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+      </header>
 
-<body>
-  <!-- Wrapper -->
-  <div id="wrapper">
-    <!-- Header -->
-    <header id="header">
-      <span class="avatar"><img src="images/fulls/CTA_10.png" alt="photo of Alex" /></span>
-      <h1>
-        My name is <strong>Alex Curnow</strong>, and I'm a full stack web
-        developer.
-      </h1>
-      <ul class="icons">
-        <li>
-          <a target="_blank" href="https://github.com/alexcurnow" class="icon style2 fa-youtube"><span
-              class="label">Youtube</span></a>
-        </li>
-        <li>
-          <a target="_blank" href="https://github.com/alexcurnow" class="icon style2 fa-github"><span
-              class="label">GitHub</span></a>
-        </li>
-        <li>
-          <a target="_blank" href="./assets/AlexCurnowResumeV3.pdf" class="icon style2 fa-file"><span
-              class="label">Resumé</span></a>
-        </li>
-        <li>
-          <a target="_blank" href="https://www.linkedin.com/in/alexcurnow/" class="icon style2 fa-linkedin"><span
-              class="label">LinkedIn</span></a>
-        </li>
-        <li>
-          <a href="mailto:alexcurnow@gmail.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a>
-        </li>
-      </ul>
-    </header>
-
-    <!-- Main -->
-    <section id="main">
-      <h1 class="myWork"></h1>
-      <!-- Thumbnails -->
-      <section class="readme">
-        <p>
-        </p>
+      <!-- Main -->
+      <section id="main">
+        <h1 class="myWork"></h1>
+        <!-- Thumbnails -->
+        <section class="readme">
+          <p></p>
+        </section>
       </section>
-    </section>
 
-    <!-- Footer -->
-    <footer id="footer">
-      <p>
-        &copy; Untitled. All rights reserved. Design:
-        <a href="http://templated.co">TEMPLATED</a>.
-      </p>
-    </footer>
-  </div>
+      <!-- Footer -->
+      <footer id="footer">
+        <p>
+          &copy; Untitled. All rights reserved. Design:
+          <a href="http://templated.co">TEMPLATED</a>.
+        </p>
+      </footer>
+    </div>
 
-  <!-- Scripts -->
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/jquery.poptrox.min.js"></script>
-  <script src="assets/js/skel.min.js"></script>
-  <script src="assets/js/main.js"></script>
-</body>
-
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
 
 <!-- <div>
