adding technologies used section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,72 @@
         <h1 class="myWork"></h1>
         <!-- Thumbnails -->
         <section class="readme">
-          <p></p>
+          <div class="container technos">
+            <div id="techs" class="row">
+                <!-- content inserted from the techs.json file -->
+            <div class="col-sm-2 technologies">
+         <center><a href="https://www.javascript.com/" target="_blank"><img class="techs" src="images/techs/javascript.png" alt="JavaScript" data-toggle="tooltip" data-placement="top" title="JavaScript"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://reactjs.org/" target="_blank"><img class="techs" src="images/techs/react.png" alt="React" data-toggle="tooltip" data-placement="top" title="React"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://jquery.com/" target="_blank"><img class="techs" src="images/techs/jquery.png" alt="jQuery" data-toggle="tooltip" data-placement="top" title="jQuery"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://git-scm.com" target="_blank"><img class="techs" src="images/techs/git.png" alt="Git" data-toggle="tooltip" data-placement="top" title="Git"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://github.com/" target="_blank"><img class="techs" src="images/techs/github.png" alt="Github" data-toggle="tooltip" data-placement="top" title="Github"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank"><img class="techs" src="images/techs/html5.png" alt="HTML5" data-toggle="tooltip" data-placement="top" title="HTML5"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3" target="_blank"><img class="techs" src="images/techs/css3.png" alt="CSS3" data-toggle="tooltip" data-placement="top" title="CSS3"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://sass-lang.com/" target="_blank"><img class="techs" src="images/techs/sass.png" alt="Sass" data-toggle="tooltip" data-placement="top" title="Sass"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://getbootstrap.com/" target="_blank"><img class="techs" src="images/techs/bootstrap.png" alt="Bootstrap" data-toggle="tooltip" data-placement="top" title="Bootstrap"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://firebase.google.com" target="_blank"><img class="techs" src="images/techs/firebase.png" alt="Firebase" data-toggle="tooltip" data-placement="top" title="Firebase"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://www.npmjs.com/" target="_blank"><img class="techs" src="images/techs/npm.png" alt="NPM" data-toggle="tooltip" data-placement="top" title="NPM"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://www.microsoft.com/en-us/sql-server/sql-server-2017" target="_blank"><img class="techs" src="images/techs/sqlserver.png" alt="SQL Server" data-toggle="tooltip" data-placement="top" title="SQL Server"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://code.visualstudio.com/" target="_blank"><img class="techs" src="images/techs/vsc.png" alt="Visual Studio Code" data-toggle="tooltip" data-placement="top" title="Visual Studio Code"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank"><img class="techs" src="images/techs/csharp.png" alt="C#" data-toggle="tooltip" data-placement="top" title="C#"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://www.microsoft.com/net/" target="_blank"><img class="techs" src="images/techs/dotnetcore.png" alt=".NET Core" data-toggle="tooltip" data-placement="top" title=".NET Core"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://www.visualstudio.com/vs/" target="_blank"><img class="techs" src="images/techs/visualstudio.png" alt="Visual Studio" data-toggle="tooltip" data-placement="top" title="Visual Studio"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://www.asp.net/mvc" target="_blank"><img class="techs" src="images/techs/aspnetMVC.png" alt=".Net MVC" data-toggle="tooltip" data-placement="top" title=".Net MVC"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://eslint.org/" target="_blank"><img class="techs" src="images/techs/eslint.png" alt="ES lint" data-toggle="tooltip" data-placement="top" title="ES lint"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://www.postman.com/" target="_blank"><img class="techs" src="images/techs/postman.png" alt="Postman" data-toggle="tooltip" data-placement="top" title="Postman"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://dbdiagram.io/home" target="_blank"><img class="techs" src="images/techs/dbdiagram.png" alt="DbDiagram" data-toggle="tooltip" data-placement="top" title="DbDiagram"></a><br>
+         </center>
+      </div><div class="col-sm-2 technologies">
+         <center><a href="https://www.json.org/json-en.html" target="_blank"><img class="techs" src="images/techs/json.png" alt="JSON" data-toggle="tooltip" data-placement="top" title="JSON"></a><br>
+         </center>
         </section>
       </section>
 
