--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <!-- Thumbnails -->
         <section class="readme">
           <div class="container technos">
+            <h1 class="technologyTitle">Technologies</h1>
             <div id="techs" class="row">
                 <!-- content inserted from the techs.json file -->
             <div class="col-sm-2 technologies">
@@ -102,10 +103,8 @@
       </div><div class="col-sm-2 technologies">
          <center><a href="https://getbootstrap.com/" target="_blank"><img class="techs" src="images/techs/bootstrap.png" alt="Bootstrap" data-toggle="tooltip" data-placement="top" title="Bootstrap"></a><br>
          </center>
-      </div><div class="col-sm-2 technologies">
-         <center><a href="https://firebase.google.com" target="_blank"><img class="techs" src="images/techs/firebase.png" alt="Firebase" data-toggle="tooltip" data-placement="top" title="Firebase"></a><br>
-         </center>
-      </div><div class="col-sm-2 technologies">
+      </div>
+      <div class="col-sm-2 technologies">
          <center><a href="https://www.npmjs.com/" target="_blank"><img class="techs" src="images/techs/npm.png" alt="NPM" data-toggle="tooltip" data-placement="top" title="NPM"></a><br>
          </center>
       </div><div class="col-sm-2 technologies">
@@ -143,10 +142,7 @@
 
       <!-- Footer -->
       <footer id="footer">
-        <p>
-          &copy; Untitled. All rights reserved. Design:
-          <a href="http://templated.co">TEMPLATED</a>.
-        </p>
+        
       </footer>
     </div>
 
@@ -158,37 +154,3 @@
   </body>
 </html>
 
-<!-- <div>
-  <a href="images/fulls/01.jpg">
-    <img src="images/thumbs/01.jpg" alt="" />
-    <h3>Lorem ipsum dolor sit amet</h3>
-  </a>
-  <a href="images/fulls/02.jpg">
-    <img src="images/thumbs/02.jpg" alt="" />
-    <h3>Lorem ipsum dolor sit amet</h3>
-  </a>
-</div>
-<div>
-  <a href="images/fulls/03.jpg">
-    <img src="images/thumbs/03.jpg" alt="" />
-    <h3>Lorem ipsum dolor sit amet</h3>
-  </a>
-  <a href="images/fulls/04.jpg">
-    <img src="images/thumbs/04.jpg" alt="" />
-    <h3>Lorem ipsum dolor sit amet</h3>
-  </a>
-  <a href="images/fulls/05.jpg">
-    <img src="images/thumbs/05.jpg" alt="" />
-    <h3>Lorem ipsum dolor sit amet</h3>
-  </a>
-</div>
-<div>
-  <a href="images/fulls/06.jpg">
-    <img src="images/thumbs/06.jpg" alt="" />
-    <h3>Lorem ipsum dolor sit amet</h3>
-  </a>
-  <a href="images/fulls/07.jpg">
-    <img src="images/thumbs/07.jpg" alt="" />
-    <h3>Lorem ipsum dolor sit amet</h3>
-  </a>
-</div> -->
