--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
          <center><a href="https://sass-lang.com/" target="_blank"><img class="techs" src="images/techs/sass.png" alt="Sass" data-toggle="tooltip" data-placement="top" title="Sass"></a><br>
          </center>
       </div><div class="col-sm-2 technologies">
-         <center><a href="https://getbootstrap.com/" target="_blank"><img class="techs" src="images/techs/bootstrap.png" alt="Bootstrap" data-toggle="tooltip" data-placement="top" title="Bootstrap"></a><br>
+         <center><a href="https://getbootstrap.com/" target="_blank"><img style="border-radius: 13px;" class="techs" src="images/techs/bootstrap.png" alt="Bootstrap" data-toggle="tooltip" data-placement="top" title="Bootstrap"></a><br>
          </center>
       </div>
       <div class="col-sm-2 technologies">
