added youtube playlist link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li>
             <a
               target="_blank"
-              href="https://github.com/alexcurnow"
+              href="https://www.youtube.com/playlist?list=PLcFlUoLygzyUNgMP04JZ-91Z0T3Xy28dt"
               class="icon style2 fa-youtube"
               ><span class="label">Youtube</span></a
             >
